# django-test

./: .gitignore  mypy.ini  pyproject.toml  requirements.txt
app/: .env_example
app/auths/: models.py
app/layanan/: models.py
