[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_test"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "^4.2.3"
markdown = "^3.5"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.5"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
djangorestframework-simplejwt = "^5.3.0"
gunicorn = "^21.2.0"
python-json-logger = "^2.0.7"
django-safedelete = "^1.3.2"
django-resized = "^1.0.2"
pillow = "^10.1.0"
django-filter = "^23.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
jedi = "^0.19.1"
ipython = "^8.16.1"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
django-stubs = "^4.2.4"
djangorestframework-stubs = "^3.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_local_folder = ["app", "auths", "core", "datamaster"]
